[package]
name = "agri_yield"
version = "0.1.0"
edition = "2021"
description = "AgriYield RWA Soroban Smart Contract"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package.soroban-sdk]
opt-level = "z"
